; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_sort.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oid_array = type { i32, i32, i32 }

@void_hashcmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oid_array*)* @oid_array_sort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oid_array_sort(%struct.oid_array* %0) #0 {
  %2 = alloca %struct.oid_array*, align 8
  store %struct.oid_array* %0, %struct.oid_array** %2, align 8
  %3 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %4 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %7 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @void_hashcmp, align 4
  %10 = call i32 @QSORT(i32 %5, i32 %8, i32 %9)
  %11 = load %struct.oid_array*, %struct.oid_array** %2, align 8
  %12 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %11, i32 0, i32 0
  store i32 1, i32* %12, align 4
  ret void
}

declare dso_local i32 @QSORT(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
